<resources>
    <string name="app_name">Team54</string>
    <string name="team_54">Team 54</string>
    <string name="web_service">Web Service</string>
    <string name="url">URL</string>
    <string name="test_call">Test Call</string>
    <string name="team_id">Id</string>
    <string name="homeTeamScore">Home S</string>
    <string name="awayTeamScore">Away S</string>
    <string name="home_city">Home City</string>
    <string name="away_city">Away City</string>

    <string name="team_logo_unavailable_picture">Team logo unavailable picture</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="about">About</string>
    <string name="send_stickers">Send Stickers</string>
    <string name="team_54_name">Team 54</string>
    <string name="francisco_rovirosa_and_james_dudek">Francisco Rovirosa and James Dudek</string>
    <string name="send_sticker">Send Sticker</string>
    <string name="user_id">User Id: -</string>
    <string name="select_contact">My Contacts</string>
    <string name="select_sticker">My Stickers</string>
    <string name="send_message">Send</string>
    <string name="send_a_sticker">Send a Sticker</string>
    <string name="sticker">sticker</string>
    <string name="word_clash">Word Clash</string>
    <string name="word_clash_app">Word Clash</string>
    <string name="play">Play</string>
    <string name="high_scores">High Scores</string>
    <string name="settings">Settings</string>
    <string name="rules">Rules</string>
    <string-array name="emoji_names">
        <item>Select ...</item>
        <item>Angry</item>
        <item>Funny</item>
        <item>Glasses</item>
        <item>Scream</item>
        <item>Sick</item>
        <item>Sleepy</item>
        <item>Smile</item>
        <item>Thinking</item>
        <item>Unamused</item>
        <item>Wink</item>
    </string-array>
</resources>