<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:cardBackgroundColor="#F2F2F2"
    app:cardCornerRadius="16dp"
    app:cardElevation="3dp"
    app:contentPadding="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/constraintLayout"
        android:layout_width="392dp"
        android:layout_height="123dp"
        android:padding="12dp"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="2dp">

        <TextView
            android:id="@+id/homeTeamScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/homeTeamScore"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/logoHome"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/home_city"
            android:layout_width="113dp"
            android:layout_height="28dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/home_city"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/logoHome"
            app:layout_constraintTop_toBottomOf="@+id/homeTeamScore" />

        <ImageView
            android:id="@+id/logoHome"
            android:layout_width="53dp"
            android:layout_height="74dp"
            android:contentDescription="@string/team_logo_unavailable_picture"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/team7" />

        <TextView
            android:id="@+id/away_city"
            android:layout_width="118dp"
            android:layout_height="28dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="right"
            android:text="@string/away_city"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/logoAway"
            app:layout_constraintTop_toBottomOf="@+id/awayTeamScore" />

        <TextView
            android:id="@+id/awayTeamScore"
            android:layout_width="107dp"
            android:layout_height="38dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:gravity="right"
            android:text="@string/awayTeamScore"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/logoAway"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logoAway"
            android:layout_width="53dp"
            android:layout_height="74dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/team_logo_unavailable_picture"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/team7" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>